--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   iconsax_flutter: ^1.0.0
+  primer_progress_bar:
+    git:
+      url: git@github.com:sosualfred/primer_progress_bar.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
