--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  get: ^4.6.6
+  graphql_flutter: ^5.1.2
   iconsax_flutter: ^1.0.0
+  intl: ^0.18.1
   ms_undraw: ^3.1.0+3
   primer_progress_bar:
     git:
@@ -39,12 +42,6 @@ dependencies:
       ref: master
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
