--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  get: ^4.6.6
+  flutter_riverpod: ^2.4.0
   graphql_flutter: ^5.1.2
   iconsax_flutter: ^1.0.0
   intl: ^0.18.1
