--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   graphql_flutter: ^5.1.2
   iconsax_flutter: ^1.0.0
   intl: ^0.18.1
+  mockito: ^5.4.2
   ms_undraw: ^3.1.0+3
   primer_progress_bar:
     git:
