--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.0
+  google_fonts: ^4.0.4
   graphql_flutter: ^5.1.2
   iconsax_flutter: ^1.0.0
   intl: ^0.18.1
